--- a/PythonWorkshop.ipynb
+++ b/PythonWorkshop.ipynb
@@ -55,16 +55,7 @@
     "\n",
     "def calculate_grade(score):\n",
     "    # Your code here\n",
-    "    if score >= 90:\n",
-    "        return \"A\"\n",
-    "    elif score >= 80:\n",
-    "        return \"B\"\n",
-    "    elif score >= 70:\n",
-    "        return \"C\"\n",
-    "    elif score >= 60:\n",
-    "        return \"D\"\n",
-    "    else:\n",
-    "        return \"F\"\n",
+    "    \n",
     "\n",
     "# Test your function\n",
     "test_scores = [95, 82, 71, 65, 55]\n",
@@ -87,17 +78,7 @@
     "\n",
     "def calculate_discount(purchase_amount):\n",
     "    # Your code here\n",
-    "    if purchase_amount >= 1000:\n",
-    "        discount = 0.3\n",
-    "    elif purchase_amount >= 500:\n",
-    "        discount = 0.2\n",
-    "    elif purchase_amount >= 100:\n",
-    "        discount = 0.1\n",
-    "    else:\n",
-    "        discount = 0\n",
-    "    \n",
-    "    final_price = purchase_amount - (purchase_amount * discount)\n",
-    "    return final_price\n",
+    "   \n",
     "\n",
     "# Test your function\n",
     "purchase_amounts = [50, 150, 600, 1200]\n",
@@ -135,8 +116,7 @@
     "\n",
     "def celsius_to_fahrenheit(celsius):\n",
     "    # Your code here\n",
-    "    fahrenheit = celsius * 9/5 + 32\n",
-    "    return fahrenheit\n",
+    "    \n",
     "\n",
     "# Test your function\n",
     "temperatures_c = [0, 25, 37, 100]\n",
@@ -158,18 +138,7 @@
     "\n",
     "def calculator(num1, num2, operation):\n",
     "    # Your code here\n",
-    "    if operation == \"add\":\n",
-    "        return num1 + num2\n",
-    "    elif operation == \"subtract\":\n",
-    "        return num1 - num2\n",
-    "    elif operation == \"multiply\":\n",
-    "        return num1 * num2\n",
-    "    elif operation == \"divide\":\n",
-    "        if num2 == 0:\n",
-    "            return \"Error: Division by zero\"\n",
-    "        return num1 / num2\n",
-    "    else:\n",
-    "        return \"Error: Unknown operation\"\n",
+    "    \n",
     "\n",
     "# Test your function\n",
     "print(calculator(10, 5, \"add\"))      # Should return 15\n",
@@ -225,20 +194,7 @@
     "\n",
     "def calculate_statistics(numbers):\n",
     "    # Your code here\n",
-    "    if not numbers:\n",
-    "        return {\n",
-    "            \"min\": None,\n",
-    "            \"max\": None,\n",
-    "            \"average\": None,\n",
-    "            \"sum\": None\n",
-    "        }\n",
     "    \n",
-    "    return {\n",
-    "        \"min\": min(numbers),\n",
-    "        \"max\": max(numbers),\n",
-    "        \"average\": sum(numbers) / len(numbers),\n",
-    "        \"sum\": sum(numbers)\n",
-    "    }\n",
     "\n",
     "# Test your function\n",
     "test_numbers = [5, 12, 8, 42, 23, 16]\n",
@@ -258,7 +214,7 @@
     "\n",
     "def filter_even_numbers(numbers):\n",
     "    # Your code here\n",
-    "    return [num for num in numbers if num % 2 == 0]\n",
+    "   \n",
     "\n",
     "# Test your function\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -311,16 +267,7 @@
     "\n",
     "def count_words(text):\n",
     "    # Your code here\n",
-    "    words = text.lower().split()\n",
-    "    word_count = {}\n",
-    "    \n",
-    "    for word in words:\n",
-    "        # Remove punctuation if needed\n",
-    "        word = word.strip(\".,!?;:\\\"'()\")\n",
-    "        if word in word_count:\n",
-    "            word_count[word] += 1\n",
-    "        else:\n",
-    "            word_count[word] = 1\n",
+    "  \n",
     "    \n",
     "    return word_count\n",
     "\n",
@@ -343,19 +290,10 @@
     "contact_book = {}\n",
     "\n",
     "def add_contact(name, phone, email=None):\n",
-    "    contact_book[name] = {\"phone\": phone, \"email\": email}\n",
-    "    return f\"Added contact: {name}\"\n",
+    "    \n",
     "\n",
     "def update_contact(name, phone=None, email=None):\n",
-    "    if name not in contact_book:\n",
-    "        return f\"Contact {name} not found\"\n",
     "    \n",
-    "    if phone:\n",
-    "        contact_book[name][\"phone\"] = phone\n",
-    "    if email:\n",
-    "        contact_book[name][\"email\"] = email\n",
-    "    \n",
-    "    return f\"Updated contact: {name}\"\n",
     "\n",
     "def get_contact(name):\n",
     "    return contact_book.get(name, f\"Contact {name} not found\")\n",
@@ -409,14 +347,7 @@
     "\n",
     "def factorial(n):\n",
     "    # Your code here\n",
-    "    if n < 0:\n",
-    "        return \"Error: Factorial not defined for negative numbers\"\n",
     "    \n",
-    "    result = 1\n",
-    "    for i in range(1, n + 1):\n",
-    "        result *= i\n",
-    "    \n",
-    "    return result\n",
     "\n",
     "# Test your function\n",
     "for num in range(6):\n",
@@ -442,25 +373,7 @@
     "]\n",
     "\n",
     "def analyze_student_scores(students):\n",
-    "    results = {}\n",
-    "    highest_avg = 0\n",
-    "    top_student = None\n",
     "    \n",
-    "    for student in students:\n",
-    "        name = student[\"name\"]\n",
-    "        scores = student[\"scores\"]\n",
-    "        avg_score = sum(scores) / len(scores)\n",
-    "        results[name] = avg_score\n",
-    "        \n",
-    "        if avg_score > highest_avg:\n",
-    "            highest_avg = avg_score\n",
-    "            top_student = name\n",
-    "    \n",
-    "    return {\n",
-    "        \"individual_averages\": results,\n",
-    "        \"top_student\": top_student,\n",
-    "        \"top_average\": highest_avg\n",
-    "    }\n",
     "\n",
     "# Test your function\n",
     "analysis = analyze_student_scores(students_data)\n",
@@ -496,40 +409,16 @@
     "]\n",
     "\n",
     "def analyze_sales(sales):\n",
-    "    # Calculate total sales per month\n",
-    "    monthly_sales = {}\n",
-    "    for item in sales:\n",
-    "        month = item[\"month\"]\n",
-    "        amount = item[\"amount\"]\n",
-    "        if month in monthly_sales:\n",
-    "            monthly_sales[month] += amount\n",
-    "        else:\n",
-    "            monthly_sales[month] = amount\n",
+    "    # Step 1 Calculate total sales per month\n",
     "    \n",
-    "    # Calculate total sales per category\n",
-    "    category_sales = {}\n",
-    "    for item in sales:\n",
-    "        category = item[\"category\"]\n",
-    "        amount = item[\"amount\"]\n",
-    "        if category in category_sales:\n",
-    "            category_sales[category] += amount\n",
-    "        else:\n",
-    "            category_sales[category] = amount\n",
     "    \n",
-    "    # Find best performing month and category\n",
-    "    best_month = max(monthly_sales, key=monthly_sales.get)\n",
-    "    best_category = max(category_sales, key=category_sales.get)\n",
+    "    # Step 2 Calculate total sales per category\n",
     "    \n",
-    "    # Calculate overall total sales\n",
-    "    total_sales = sum(item[\"amount\"] for item in sales)\n",
     "    \n",
-    "    return {\n",
-    "        \"monthly_sales\": monthly_sales,\n",
-    "        \"category_sales\": category_sales,\n",
-    "        \"best_month\": best_month,\n",
-    "        \"best_category\": best_category,\n",
-    "        \"total_sales\": total_sales\n",
-    "    }\n",
+    "    # Step 3 Find the best performing month and category\n",
+    "        \n",
+    "    # Step 4 Calculate overall total sales\n",
+    "    \n",
     "\n",
     "# Test your analysis function\n",
     "sales_analysis = analyze_sales(sales_data)\n",
